// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditScanConfigDialog component tests should render dialog 1`] = `
.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -5px;
}

.c34 > * {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c34 > * {
  margin-left: 5px;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c21 {
  cursor: pointer;
}

.c22 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c22 * {
  height: inherit;
  width: inherit;
}

.c23 {
  overflow: hidden;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.c41 {
  overflow: hidden;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  display: none;
  height: 0;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin: 10px 0px;
  padding-bottom: 1px;
  border-bottom: 2px solid #c8d3d9;
  position: relative;
}

.c16 {
  margin: 0 0 1px 0;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  word-break: break-all;
  min-width: 100px;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 3px;
  margin-top: -2px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 800px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102,102,102,0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c52 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c51 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient( -45deg, transparent, transparent 2px, #000 2px, #000 3px );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #787878;
  border-radius: 3px;
  border: 1px solid #787878;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #519032;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #519032;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c4:hover {
  color: #fff;
  background: #519032;
}

.c5 {
  height: 24px;
  width: 24px;
  line-height: 24px;
}

.c5 * {
  height: inherit;
  width: inherit;
}

.c48 {
  display: inline-block;
  padding: 0 15px;
  color: #393637;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #aaaaaa;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c48:focus,
.c48:hover {
  border: 1px solid #393637;
}

.c48:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #66c430;
  font-weight: bold;
  color: #fff;
}

.c48[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c48 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c48:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #393637;
}

.c49 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c50 {
  border: 1px solid #787878;
  color: #519032;
  background: #87d050;
}

.c50:hover {
  color: #fff;
  background: #519032;
}

.c47 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #c8d3d9;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #787878;
  color: #fff;
  font-weight: bold;
  background: #66c430;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c7 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  overflow: hidden;
  height: 100%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  padding-bottom: 10px;
}

.c10 {
  display: inline-block;
  max-width: 100%;
  font-weight: bold;
  text-align: right;
  padding-left: 10px;
  padding-right: 10px;
  width: 16.66666667%;
  margin-left: 0;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 83.33333333%;
  padding-left: 10px;
  padding-right: 10px;
}

.c14 {
  color: #a94442;
  font-weight: bold;
  font-size: 19px;
  padding-bottom: 1px;
  padding-left: 4px;
  display: none;
}

.c25 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
  width: 100%;
}

.c25 th,
.c25 td {
  padding: 4px 10px;
  border-bottom: 1px solid #c8d3d9;
}

.c25 tfoot tr {
  background: #fff;
}

.c25 tfoot tr td {
  border-bottom: 1px solid #c8d3d9;
}

.c43 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: fixed;
  width: 100%;
}

.c43 th,
.c43 td {
  padding: 4px 10px;
  border-bottom: 1px solid #c8d3d9;
}

.c43 tfoot tr {
  background: #fff;
}

.c43 tfoot tr td {
  border-bottom: 1px solid #c8d3d9;
}

.c26 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
}

.c26 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #000;
}

.c27 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #c8d3d9;
  font-weight: bold;
}

.c29 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #c8d3d9;
  font-weight: bold;
  width: 9em;
}

.c44 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #c8d3d9;
  font-weight: bold;
  width: 30%;
}

.c45 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #c8d3d9;
  font-weight: bold;
  width: 10%;
}

.c12 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  display: block;
  height: 22px;
  color: #393637;
  background-color: #fff;
  background-image: none;
  border: 1px solid #aaaaaa;
  border-radius: 2px;
  padding: 1px 8px;
}

.c12:-webkit-autofill {
  box-shadow: 0 0 0 1000px white inset;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c42 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c35 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: normal;
  cursor: pointer;
}

.c36 {
  font-family: inherit;
  font-size: inherit;
  padding: 0;
  margin: 0;
  margin-left: 10px;
  line-height: normal;
  width: auto;
  height: auto;
}

.c37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c46 {
  overflow-wrap: break-word;
}

@media print {
  .c21 {
    display: none;
  }
}

@media print {
  .c25 {
    border-collapse: collapse;
  }
}

@media screen {
  .c25 > tbody:nth-of-type(even),
  .c25 > tbody:only-of-type > tr:nth-of-type(even) {
    background: #eeeeee;
  }

  .c25 > tbody:not(:only-of-type):hover,
  .c25 > tbody:only-of-type > tr:hover {
    background: #c8d3d9;
  }
}

@media print {
  .c43 {
    border-collapse: collapse;
  }
}

@media screen {
  .c43 > tbody:nth-of-type(even),
  .c43 > tbody:only-of-type > tr:nth-of-type(even) {
    background: #eeeeee;
  }

  .c43 > tbody:not(:only-of-type):hover,
  .c43 > tbody:only-of-type > tr:hover {
    background: #c8d3d9;
  }
}

@media print {
  .c26 {
    border-bottom: 1px solid black;
  }

  .c26 a,
  .c26 a:hover {
    -webkit-text-decoration: none;
    text-decoration: none;
    color: #000;
  }
}

@media print {
  .c27 {
    color: #000;
    font-size: 1.2em;
    background-color: none;
    font-weight: bold;
  }
}

@media print {
  .c29 {
    color: #000;
    font-size: 1.2em;
    background-color: none;
    font-weight: bold;
  }
}

@media print {
  .c44 {
    color: #000;
    font-size: 1.2em;
    background-color: none;
    font-weight: bold;
  }
}

@media print {
  .c45 {
    color: #000;
    font-size: 1.2em;
    background-color: none;
    font-weight: bold;
  }
}

<body>
  <div
    id="portals"
  >
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="800px"
        >
          <div
            class="c2"
          >
            <div
              class="c3"
              data-testid="dialog-title-bar"
            >
              <span>
                Edit Scan Config
              </span>
              <div
                class="c4 c5"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c6"
            >
              <div
                class="c7"
                data-testid="save-dialog-content"
              >
                <div
                  class="c8"
                >
                  <div
                    class="c9"
                  >
                    <label
                      class="c10"
                      data-testid="formgroup-title"
                    >
                      Name
                    </label>
                    <div
                      class="c11"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <input
                        class="c12 c13"
                        name="name"
                        size="30"
                        type="text"
                        value="Config"
                      />
                      <div
                        class="c14"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <div
                    class="c9"
                  >
                    <label
                      class="c10"
                      data-testid="formgroup-title"
                    >
                      Comment
                    </label>
                    <div
                      class="c11"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <input
                        class="c12 c13"
                        name="comment"
                        size="30"
                        type="text"
                        value="bar"
                      />
                      <div
                        class="c14"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <section>
                    <div
                      class="c15 section-header"
                    >
                      <h2
                        class="c16 c17"
                      >
                        <div
                          class="c18"
                        >
                          Edit Network Vulnerability Test Families (4)
                        </div>
                      </h2>
                      <div
                        class="c19"
                      >
                        <div
                          class="c20"
                        >
                          <span
                            class="c21 c22 section-fold-icon"
                            data-testid="svg-icon"
                            title="Fold"
                          >
                            <svg
                              title="Fold"
                            >
                              unfold.svg
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c23"
                    >
                      <div
                        class="c24"
                      >
                        <table
                          class="c25"
                        >
                          <thead
                            class="c26"
                          >
                            <tr>
                              <th
                                class="c27"
                              >
                                <div
                                  class="c28"
                                >
                                  Family
                                </div>
                              </th>
                              <th
                                class="c27"
                              >
                                <div
                                  class="c28"
                                >
                                  NVTs selected
                                </div>
                              </th>
                              <th
                                class="c27"
                              >
                                <div
                                  class="c28"
                                >
                                  Trend
                                </div>
                              </th>
                              <th
                                class="c29"
                              >
                                <div
                                  class="c28"
                                >
                                  Select all NVTs
                                </div>
                              </th>
                              <th
                                class="c27"
                              >
                                <div
                                  class="c30"
                                >
                                  Actions
                                </div>
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class=""
                          >
                            <tr>
                              <td>
                                <div
                                  class="c8"
                                >
                                  family1
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c31"
                                >
                                  1 of 1
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c32"
                                >
                                  <div
                                    class="c33"
                                  >
                                    <div
                                      class="c34"
                                      margin="5px"
                                    >
                                      <label
                                        class="c35"
                                      >
                                        <div
                                          class="c33"
                                        >
                                          <div
                                            class="c34"
                                            margin="5px"
                                          >
                                            <input
                                              checked=""
                                              class="c36 c37"
                                              data-testid="radio-input"
                                              name="family1"
                                              type="radio"
                                              value="1"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Dynamic"
                                        class="c22"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_more.svg
                                        </svg>
                                      </span>
                                      <label
                                        class="c35"
                                      >
                                        <div
                                          class="c33"
                                        >
                                          <div
                                            class="c34"
                                            margin="5px"
                                          >
                                            <input
                                              class="c36 c37"
                                              data-testid="radio-input"
                                              name="family1"
                                              type="radio"
                                              value="0"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Static"
                                        class="c22"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_nochange.svg
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c38"
                                >
                                  <label
                                    class="c35"
                                  >
                                    <div
                                      class="c33"
                                    >
                                      <div
                                        class="c34"
                                        margin="5px"
                                      >
                                        <input
                                          checked=""
                                          class="c36 c39"
                                          name="family1"
                                          type="checkbox"
                                        />
                                      </div>
                                    </div>
                                  </label>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c40"
                                >
                                  <span
                                    class="c21 c22"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config Family"
                                  >
                                    <svg
                                      title="Edit Scan Config Family"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td>
                                <div
                                  class="c8"
                                >
                                  family2
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c31"
                                >
                                  2 of 4
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c32"
                                >
                                  <div
                                    class="c33"
                                  >
                                    <div
                                      class="c34"
                                      margin="5px"
                                    >
                                      <label
                                        class="c35"
                                      >
                                        <div
                                          class="c33"
                                        >
                                          <div
                                            class="c34"
                                            margin="5px"
                                          >
                                            <input
                                              class="c36 c37"
                                              data-testid="radio-input"
                                              name="family2"
                                              type="radio"
                                              value="1"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Dynamic"
                                        class="c22"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_more.svg
                                        </svg>
                                      </span>
                                      <label
                                        class="c35"
                                      >
                                        <div
                                          class="c33"
                                        >
                                          <div
                                            class="c34"
                                            margin="5px"
                                          >
                                            <input
                                              checked=""
                                              class="c36 c37"
                                              data-testid="radio-input"
                                              name="family2"
                                              type="radio"
                                              value="0"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Static"
                                        class="c22"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_nochange.svg
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c38"
                                >
                                  <label
                                    class="c35"
                                  >
                                    <div
                                      class="c33"
                                    >
                                      <div
                                        class="c34"
                                        margin="5px"
                                      >
                                        <input
                                          class="c36 c39"
                                          name="family2"
                                          type="checkbox"
                                        />
                                      </div>
                                    </div>
                                  </label>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c40"
                                >
                                  <span
                                    class="c21 c22"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config Family"
                                  >
                                    <svg
                                      title="Edit Scan Config Family"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td>
                                <div
                                  class="c8"
                                >
                                  family3
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c31"
                                >
                                  0 of 2
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c32"
                                >
                                  <div
                                    class="c33"
                                  >
                                    <div
                                      class="c34"
                                      margin="5px"
                                    >
                                      <label
                                        class="c35"
                                      >
                                        <div
                                          class="c33"
                                        >
                                          <div
                                            class="c34"
                                            margin="5px"
                                          >
                                            <input
                                              class="c36 c37"
                                              data-testid="radio-input"
                                              name="family3"
                                              type="radio"
                                              value="1"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Dynamic"
                                        class="c22"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_more.svg
                                        </svg>
                                      </span>
                                      <label
                                        class="c35"
                                      >
                                        <div
                                          class="c33"
                                        >
                                          <div
                                            class="c34"
                                            margin="5px"
                                          >
                                            <input
                                              checked=""
                                              class="c36 c37"
                                              data-testid="radio-input"
                                              name="family3"
                                              type="radio"
                                              value="0"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Static"
                                        class="c22"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_nochange.svg
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c38"
                                >
                                  <label
                                    class="c35"
                                  >
                                    <div
                                      class="c33"
                                    >
                                      <div
                                        class="c34"
                                        margin="5px"
                                      >
                                        <input
                                          class="c36 c39"
                                          name="family3"
                                          type="checkbox"
                                        />
                                      </div>
                                    </div>
                                  </label>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c40"
                                >
                                  <span
                                    class="c21 c22"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config Family"
                                  >
                                    <svg
                                      title="Edit Scan Config Family"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td>
                                <div
                                  class="c8"
                                >
                                  family4
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c31"
                                >
                                  0 of 6
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c32"
                                >
                                  <div
                                    class="c33"
                                  >
                                    <div
                                      class="c34"
                                      margin="5px"
                                    >
                                      <label
                                        class="c35"
                                      >
                                        <div
                                          class="c33"
                                        >
                                          <div
                                            class="c34"
                                            margin="5px"
                                          >
                                            <input
                                              class="c36 c37"
                                              data-testid="radio-input"
                                              name="family4"
                                              type="radio"
                                              value="1"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Dynamic"
                                        class="c22"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_more.svg
                                        </svg>
                                      </span>
                                      <label
                                        class="c35"
                                      >
                                        <div
                                          class="c33"
                                        >
                                          <div
                                            class="c34"
                                            margin="5px"
                                          >
                                            <input
                                              checked=""
                                              class="c36 c37"
                                              data-testid="radio-input"
                                              name="family4"
                                              type="radio"
                                              value="0"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Static"
                                        class="c22"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_nochange.svg
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c38"
                                >
                                  <label
                                    class="c35"
                                  >
                                    <div
                                      class="c33"
                                    >
                                      <div
                                        class="c34"
                                        margin="5px"
                                      >
                                        <input
                                          class="c36 c39"
                                          name="family4"
                                          type="checkbox"
                                        />
                                      </div>
                                    </div>
                                  </label>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c40"
                                >
                                  <span
                                    class="c21 c22"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config Family"
                                  >
                                    <svg
                                      title="Edit Scan Config Family"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </section>
                  <section>
                    <div
                      class="c15 section-header"
                    >
                      <h2
                        class="c16 c17"
                      >
                        <div
                          class="c18"
                        >
                          Edit Scanner Preferences (1)
                        </div>
                      </h2>
                      <div
                        class="c19"
                      >
                        <div
                          class="c20"
                        >
                          <span
                            class="c21 c22 section-fold-icon"
                            data-testid="svg-icon"
                            title="Unfold"
                          >
                            <svg
                              title="Unfold"
                            >
                              fold.svg
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c41"
                    >
                      <div
                        class="c24"
                      >
                        <table
                          class="c25"
                        >
                          <thead
                            class="c26"
                          >
                            <tr>
                              <th
                                class="c27"
                              >
                                <div
                                  class="c28"
                                >
                                  Name
                                </div>
                              </th>
                              <th
                                class="c27"
                              >
                                <div
                                  class="c28"
                                >
                                  New Value
                                </div>
                              </th>
                              <th
                                class="c27"
                              >
                                <div
                                  class="c28"
                                >
                                  Default Value
                                </div>
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class=""
                          >
                            <tr>
                              <td>
                                <div
                                  class="c8"
                                >
                                  Scanner Preference 1
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c8"
                                >
                                  <input
                                    class="c12 c42"
                                    name="scannerpref0"
                                    type="text"
                                    value="0"
                                  />
                                  <div
                                    class="c14"
                                    data-testid="error-marker"
                                  >
                                    ×
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c8"
                                />
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </section>
                  <section>
                    <div
                      class="c15 section-header"
                    >
                      <h2
                        class="c16 c17"
                      >
                        <div
                          class="c18"
                        >
                          Network Vulnerability Test Preferences (3)
                        </div>
                      </h2>
                      <div
                        class="c19"
                      >
                        <div
                          class="c20"
                        >
                          <span
                            class="c21 c22 section-fold-icon"
                            data-testid="svg-icon"
                            title="Unfold"
                          >
                            <svg
                              title="Unfold"
                            >
                              fold.svg
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c41"
                    >
                      <div
                        class="c24"
                      >
                        <table
                          class="c43"
                        >
                          <thead
                            class="c26"
                          >
                            <tr>
                              <th
                                class="c44"
                              >
                                <div
                                  class="c28"
                                >
                                  NVT
                                </div>
                              </th>
                              <th
                                class="c44"
                              >
                                <div
                                  class="c28"
                                >
                                  Name
                                </div>
                              </th>
                              <th
                                class="c44"
                              >
                                <div
                                  class="c28"
                                >
                                  Value
                                </div>
                              </th>
                              <th
                                class="c45"
                              >
                                <div
                                  class="c30"
                                >
                                  Actions
                                </div>
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class=""
                          >
                            <tr>
                              <td
                                class="c46"
                              >
                                <div
                                  class="c8"
                                >
                                  preference0
                                </div>
                              </td>
                              <td
                                class="c46"
                              >
                                <div
                                  class="c8"
                                >
                                  preference1
                                </div>
                              </td>
                              <td
                                class="c46"
                              >
                                <div
                                  class="c8"
                                >
                                  3
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c40"
                                >
                                  <span
                                    class="c21 c22"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config NVT Details"
                                  >
                                    <svg
                                      title="Edit Scan Config NVT Details"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td
                                class="c46"
                              >
                                <div
                                  class="c8"
                                >
                                  preference1
                                </div>
                              </td>
                              <td
                                class="c46"
                              >
                                <div
                                  class="c8"
                                >
                                  preference2
                                </div>
                              </td>
                              <td
                                class="c46"
                              >
                                <div
                                  class="c8"
                                >
                                  4
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c40"
                                >
                                  <span
                                    class="c21 c22"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config NVT Details"
                                  >
                                    <svg
                                      title="Edit Scan Config NVT Details"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td
                                class="c46"
                              >
                                <div
                                  class="c8"
                                >
                                  preference2
                                </div>
                              </td>
                              <td
                                class="c46"
                              >
                                <div
                                  class="c8"
                                >
                                  preference
                                </div>
                              </td>
                              <td
                                class="c46"
                              >
                                <div
                                  class="c8"
                                >
                                  5
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c40"
                                >
                                  <span
                                    class="c21 c22"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config NVT Details"
                                  >
                                    <svg
                                      title="Edit Scan Config NVT Details"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
            <div
              class="c47"
            >
              <button
                class="c48 c49 c50"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c48 c49 c50"
                data-testid="dialog-save-button"
                title="Save"
              >
                Save
              </button>
            </div>
          </div>
          <div
            class="c51"
          >
            <div
              class="c52"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;

exports[`EditScanConfigDialog component tests should render dialog for osp config 1`] = `
<body>
  <div
    id="portals"
  >
    .c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c28 {
  cursor: pointer;
}

.c29 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c29 * {
  height: inherit;
  width: inherit;
}

.c30 {
  overflow: hidden;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  display: none;
  height: 0;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin: 10px 0px;
  padding-bottom: 1px;
  border-bottom: 2px solid #c8d3d9;
  position: relative;
}

.c23 {
  margin: 0 0 1px 0;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  word-break: break-all;
  min-width: 100px;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 3px;
  margin-top: -2px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 800px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102,102,102,0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c42 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c41 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient( -45deg, transparent, transparent 2px, #000 2px, #000 3px );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #787878;
  border-radius: 3px;
  border: 1px solid #787878;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #519032;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #519032;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c4:hover {
  color: #fff;
  background: #519032;
}

.c5 {
  height: 24px;
  width: 24px;
  line-height: 24px;
}

.c5 * {
  height: inherit;
  width: inherit;
}

.c38 {
  display: inline-block;
  padding: 0 15px;
  color: #393637;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #aaaaaa;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c38:focus,
.c38:hover {
  border: 1px solid #393637;
}

.c38:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #66c430;
  font-weight: bold;
  color: #fff;
}

.c38[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c38 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c38:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #393637;
}

.c39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c40 {
  border: 1px solid #787878;
  color: #519032;
  background: #87d050;
}

.c40:hover {
  color: #fff;
  background: #519032;
}

.c37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #c8d3d9;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #787878;
  color: #fff;
  font-weight: bold;
  background: #66c430;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c7 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  overflow: hidden;
  height: 100%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  padding-bottom: 10px;
}

.c10 {
  display: inline-block;
  max-width: 100%;
  font-weight: bold;
  text-align: right;
  padding-left: 10px;
  padding-right: 10px;
  width: 16.66666667%;
  margin-left: 0;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 83.33333333%;
  padding-left: 10px;
  padding-right: 10px;
}

.c20 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  margin: 1px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c21 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c21 * {
  height: inherit;
  width: inherit;
}

.c17 {
  border: 1px solid #aaaaaa;
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1px 5px;
  background-color: #fff;
  color: #000;
  font-weight: normal;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 180px;
}

.c14 {
  color: #a94442;
  font-weight: bold;
  font-size: 19px;
  padding-bottom: 1px;
  padding-left: 4px;
  display: none;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  word-break: keep-all;
  white-space: nowrap;
  overflow: hidden;
  cursor: pointer;
  cursor: default;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c32 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
  width: 100%;
}

.c32 th,
.c32 td {
  padding: 4px 10px;
  border-bottom: 1px solid #c8d3d9;
}

.c32 tfoot tr {
  background: #fff;
}

.c32 tfoot tr td {
  border-bottom: 1px solid #c8d3d9;
}

.c33 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
}

.c33 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #000;
}

.c34 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #c8d3d9;
  font-weight: bold;
}

.c12 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  display: block;
  height: 22px;
  color: #393637;
  background-color: #fff;
  background-image: none;
  border: 1px solid #aaaaaa;
  border-radius: 2px;
  padding: 1px 8px;
}

.c12:-webkit-autofill {
  box-shadow: 0 0 0 1000px white inset;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media print {
  .c28 {
    display: none;
  }
}

@media print {
  .c32 {
    border-collapse: collapse;
  }
}

@media screen {
  .c32 > tbody:nth-of-type(even),
  .c32 > tbody:only-of-type > tr:nth-of-type(even) {
    background: #eeeeee;
  }

  .c32 > tbody:not(:only-of-type):hover,
  .c32 > tbody:only-of-type > tr:hover {
    background: #c8d3d9;
  }
}

@media print {
  .c33 {
    border-bottom: 1px solid black;
  }

  .c33 a,
  .c33 a:hover {
    -webkit-text-decoration: none;
    text-decoration: none;
    color: #000;
  }
}

@media print {
  .c34 {
    color: #000;
    font-size: 1.2em;
    background-color: none;
    font-weight: bold;
  }
}

<div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="800px"
        >
          <div
            class="c2"
          >
            <div
              class="c3"
              data-testid="dialog-title-bar"
            >
              <span>
                Edit Scan Config
              </span>
              <div
                class="c4 c5"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c6"
            >
              <div
                class="c7"
                data-testid="save-dialog-content"
              >
                <div
                  class="c8"
                >
                  <div
                    class="c9"
                  >
                    <label
                      class="c10"
                      data-testid="formgroup-title"
                    >
                      Name
                    </label>
                    <div
                      class="c11"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <input
                        class="c12 c13"
                        name="name"
                        size="30"
                        type="text"
                        value="Config"
                      />
                      <div
                        class="c14"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <div
                    class="c9"
                  >
                    <label
                      class="c10"
                      data-testid="formgroup-title"
                    >
                      Comment
                    </label>
                    <div
                      class="c11"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <input
                        class="c12 c13"
                        name="comment"
                        size="30"
                        type="text"
                        value="bar"
                      />
                      <div
                        class="c14"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <div
                    class="c9"
                  >
                    <label
                      class="c10"
                      data-testid="formgroup-title"
                    >
                      Scanner
                    </label>
                    <div
                      class="c11"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="downshift-0-label"
                        class="c15"
                        role="combobox"
                      >
                        <div
                          class="c16"
                          width="180px"
                        >
                          <div
                            aria-haspopup="true"
                            aria-label="open menu"
                            class="c17"
                            data-toggle="true"
                            role="button"
                            type="button"
                          >
                            <div
                              class="c18"
                              data-testid="select-selected-value"
                              title="scanner1"
                            >
                              scanner1
                            </div>
                            <div
                              class="c19"
                            >
                              <span
                                class="c20 c21"
                                data-testid="select-open-button"
                              >
                                ▼
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="c14"
                          data-testid="error-marker"
                        >
                          ×
                        </div>
                      </div>
                    </div>
                  </div>
                  <section>
                    <div
                      class="c22 section-header"
                    >
                      <h2
                        class="c23 c24"
                      >
                        <div
                          class="c25"
                        >
                          Edit Scanner Preferences (1)
                        </div>
                      </h2>
                      <div
                        class="c26"
                      >
                        <div
                          class="c27"
                        >
                          <span
                            class="c28 c29 section-fold-icon"
                            data-testid="svg-icon"
                            title="Unfold"
                          >
                            <svg
                              title="Unfold"
                            >
                              fold.svg
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c30"
                    >
                      <div
                        class="c31"
                      >
                        <table
                          class="c32"
                        >
                          <thead
                            class="c33"
                          >
                            <tr>
                              <th
                                class="c34"
                              >
                                <div
                                  class="c35"
                                >
                                  Name
                                </div>
                              </th>
                              <th
                                class="c34"
                              >
                                <div
                                  class="c35"
                                >
                                  New Value
                                </div>
                              </th>
                              <th
                                class="c34"
                              >
                                <div
                                  class="c35"
                                >
                                  Default Value
                                </div>
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class=""
                          >
                            <tr>
                              <td>
                                <div
                                  class="c8"
                                >
                                  Scanner Preference 1
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c8"
                                >
                                  <input
                                    class="c12 c36"
                                    name="scannerpref0"
                                    type="text"
                                    value="0"
                                  />
                                  <div
                                    class="c14"
                                    data-testid="error-marker"
                                  >
                                    ×
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c8"
                                />
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
            <div
              class="c37"
            >
              <button
                class="c38 c39 c40"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c38 c39 c40"
                data-testid="dialog-save-button"
                title="Save"
              >
                Save
              </button>
            </div>
          </div>
          <div
            class="c41"
          >
            <div
              class="c42"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;
